# Esp_32_AP_STA_PantallaRGB_v1

./: .cproject  .gitignore  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/display/: CMakeLists.txt  display.cpp  display.h  logo_data.inc
components/hub75/: CMakeLists.txt
main/: CMakeLists.txt  app_state.h  main.c
main/Led/: led_status.c  led_status.h
main/button/: button_reset.c  button_reset.h
main/io/: io.c  io_ctrl.h
main/mqtt/: mqtt_integration.c  mqtt_integration.h
main/storage/: nvs_storage.c  nvs_storage.h
main/system/: system_state.c  system_state.h
main/web/: web_server.c  web_server.h
main/wifi/: wifi_manager.c  wifi_mgr.h
